Make minor design tweaks

--- a/performanceapp.client/src/components/PortfolioGrid.css
+++ b/performanceapp.client/src/components/PortfolioGrid.css
@@ -18,8 +18,7 @@
 }
 
 .cell {
-    background-color: aliceblue;
-    /* color: #fff; */
+    background-color: lightgray;
     border-radius: 5px;
     padding: 5px;
     display: grid;
