--- a/performanceapp.client/src/components/PortfolioGrid.css
+++ b/performanceapp.client/src/components/PortfolioGrid.css
@@ -18,7 +18,7 @@
 }
 
 .cell {
-    background-color: lightgray;
+    background-color: rgb(33 ,31 ,94, 0.2);
     border-radius: 5px;
     padding: 5px;
     display: grid;
