--- a/performanceapp.client/src/components/Table.css
+++ b/performanceapp.client/src/components/Table.css
@@ -10,6 +10,22 @@
     text-align: center;
 }
 
-th {
+table th {
     text-align: center;
+    background-color: rgb(33, 31, 94, 1);
+    /* color: rgb(233, 184, 95); */
+    color: white;
+}
+
+table tbody tr:nth-child(odd) {
+    background-color: rgb(33, 31, 94, 0.4);
+}
+
+table tbody tr:nth-child(even) {
+    background-color: rgb(33, 31, 94, 0.2);
+}
+
+table tbody tr:hover {
+    background-color: rgb(33, 31, 94, 0.5);
+    color: white;
 }
