--- a/performanceapp.client/src/pages/App.css
+++ b/performanceapp.client/src/pages/App.css
@@ -15,3 +15,8 @@ table {
     margin-left: auto;
     margin-right: auto;
 }
+
+.mainContent {
+    background-color: var(--color-background);
+    padding: 20px;
+}
