--- a/performanceapp.client/src/components/LoginForm.css
+++ b/performanceapp.client/src/components/LoginForm.css
@@ -7,7 +7,7 @@
 
 .login-form {
     display: grid;
-    grid-template-rows: repeat(4, 1fr);
+    grid-template-rows: repeat(5, 1fr);
     grid-template-columns: repeat(2, 1fr);
     max-width: 320px;
     align-items: center;
@@ -17,6 +17,13 @@
 
 .login-title {
     grid-column: 1 / -1;
+    text-align: center;
+    font-weight: bold;
+}
+
+.login-error {
+    grid-column: 1 / -1;
+    color: red;
     text-align: center;
     font-weight: bold;
 }
