--- a/performanceapp.client/src/components/Header.css
+++ b/performanceapp.client/src/components/Header.css
@@ -1,8 +1,33 @@
 .header {
-    padding: 15px 20px; /* Top/bottom and left/right padding */
-    background-color: #211f5e; /* Dark bar */
-    color: #e9b85f; /* Text color */
-    font-size: 56px; /* Bigger text */
+    /* padding: 15px 0;  */
+    background-color: #211f5e;
+    color: #e9b85f;
+    /* font-size: 56px; */
     font-weight: bold;
-    text-align: center; /* Left-aligned text */
+    text-align: center;
+    box-sizing: border-box;
+    width: 100%;
+    place-items: center;
+}
+
+.header .header-container {
+    align-items: center;
+    min-width: 800px;
+    max-width: 1200px;
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.header-text {
+    flex: 1;
+    font-size: 56px;
+    padding: 15px 0;
+    text-align: left;
+}
+
+.header h1 {
+    /* max-width: 800px; */
+    margin: 0;
+    font-size: inherit;
 }
