--- a/performanceapp.client/src/components/MainApp.css
+++ b/performanceapp.client/src/components/MainApp.css
@@ -1,8 +1,8 @@
 ﻿#root {
-    max-width: 1280px;
+    /* max-width: 1280px; */
     min-width: 800px;
     margin: 0 auto;
-    padding: 2rem;
+    /* padding: 2rem; */
     text-align: center;
 }
 
@@ -16,7 +16,17 @@ table {
     margin-right: auto;
 }
 
+.mainContent-container {
+    padding: 32px 0;
+    place-items: center;
+}
+
 .mainContent {
+    max-width: 1200px;
+    min-width: 800px;
+    width: 100%;
     background-color: var(--color-background);
     padding: 20px;
+    border-radius: 12px;
+    box-shadow: 0 2px 8px rgba(0,0,0,0.04);
 }
