--- a/performanceapp.client/src/components/MainApp.css
+++ b/performanceapp.client/src/components/MainApp.css
@@ -6,7 +6,8 @@
     text-align: center;
 }
 
-th, td {
+th,
+td {
     padding-left: 1rem;
     padding-right: 1rem;
 }
@@ -28,5 +29,5 @@ table {
     background-color: var(--color-background);
     padding: 20px;
     border-radius: 12px;
-    box-shadow: 0 2px 8px rgba(0,0,0,0.04);
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.04);
 }
