--- a/performanceapp.client/src/components/PortfolioGrid/PortfolioGrid.css
+++ b/performanceapp.client/src/components/PortfolioGrid/PortfolioGrid.css
@@ -1,8 +1,8 @@
 .gridWrapper {
   display: grid;
-  grid-template-columns: 1fr 1fr 2fr;
-  grid-template-rows: repeat(2, 1fr);
-  gap: 10px;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  background-color: rgb(33, 31, 94, 0.2);
 }
 
 .subGridWrapper {
@@ -24,22 +24,22 @@
   justify-items: center; /* horizontal alignment */
 }
 
-#portfolioDropdown {
-  grid-column: 1;
-  grid-row: 1 / 3;
-}
-
-#dateDropdown {
-  grid-column: 2;
-  grid-row: 1 / 3;
-}
-
 #portfolioInfo {
-  grid-column: 3;
+  grid-column: 1;
   grid-row: 1;
 }
 
+#portfolioDropdown {
+  grid-column: 1;
+  grid-row: 2;
+}
+
 #benchmarkInfo {
-  grid-column: 3;
+  grid-column: 2;
+  grid-row: 1;
+}
+
+#benchmarkDropdown {
+  grid-column: 2;
   grid-row: 2;
 }
